# AlgMet-CPP

./: CMakeLists.txt  README.md
EKS1-VectorAlgMet/: CMakeLists.txt
EKS1-VectorAlgMet/include/: VectorAlgMet_EKS1.h  Vector_Ex1.h
EKS10-3xRecursion/: CMakeLists.txt
EKS10-3xRecursion/include/: TxRecursion.h
EKS11-GrafikkRekursjon/: CMakeLists.txt
EKS12-RekursivTreTraversering/: CMakeLists.txt
EKS12-RekursivTreTraversering/include/: RecursiveTreeTraversal.h
EKS13-SkrivStjerner/: CMakeLists.txt
EKS13-SkrivStjerner/include/: PrintStars.h
EKS14-DronningPlassering/: CMakeLists.txt
EKS14-DronningPlassering/include/: QueenPlacement.h
EKS15-TreCase1/: CMakeLists.txt
EKS16-TreCase2/: CMakeLists.txt
EKS17-TreCase3/: CMakeLists.txt
EKS18-TreCase4/: CMakeLists.txt
EKS19-Permutering/: CMakeLists.txt
EKS2-StackAlgMet/: CMakeLists.txt
EKS20-Permutering2/: CMakeLists.txt
EKS21-SelectionSort/: CMakeLists.txt
EKS22-InsertionSort/: CMakeLists.txt
EKS23-ShellSort/: CMakeLists.txt
EKS24-QuickSort/: CMakeLists.txt
EKS25-Heap/: CMakeLists.txt
EKS27-Searching/: CMakeLists.txt
EKS28-BinarySearchTree/: CMakeLists.txt
EKS29-Hashing/: CMakeLists.txt
EKS3-QueueAlgMet/: CMakeLists.txt
EKS30-DFS-BFS/: CMakeLists.txt
EKS4-ListAlgMet/: CMakeLists.txt
EKS5-InfixTilPostfix/: CMakeLists.txt
EKS6-PostfixToResult/: CMakeLists.txt
EKS7-ByggeParseTre/: CMakeLists.txt
EKS8-TreTraversering/: CMakeLists.txt
EKS9-EnkelRekursjon/: CMakeLists.txt
Oblig2/: CMakeLists.txt
Testing/: CMakeLists.txt  Main.cpp
VectorAlgMet-EKS1/: CMakeLists.txt
(+76 files in other folders)
